--- a/app/src/main/res/layout/list_floor.xml
+++ b/app/src/main/res/layout/list_floor.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="5dp"
     android:weightSum="1">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:gravity="center_vertical"
         android:id="@+id/textView"
-        android:layout_weight="0.99"
+        android:layout_weight="1"
         android:clickable="false" />
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/imageView"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:id="@+id/imageButton"
+        android:layout_weight="1"
+        android:cropToPadding="false"
         android:layout_gravity="center_vertical"
-        android:layout_weight="0.99" />
+        android:scaleType="fitXY" />
 
 </LinearLayout>
