--- a/app/src/main/res/layout/activity_floor_plan_viewpager.xml
+++ b/app/src/main/res/layout/activity_floor_plan_viewpager.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ViewPager
+    <com.cs420.unrmaps.ExtendedViewPager
         android:id="@+id/floor_plan_pager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
