--- a/app/src/main/res/layout/fragment_floorplan_vp.xml
+++ b/app/src/main/res/layout/fragment_floorplan_vp.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.cs420.unrmaps.TouchImageView
         android:id="@+id/floor_plan_image_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
